<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- 全局文字 -->
	<string name="hello">Hello World!</string>
	<string name="app_name">QS监控助手</string>
	<string name="app_version">v1.2</string>
	<!-- 按钮文字 -->
	<string name="btn_confirm">确认</string>
	<string name="btn_cancel">取消</string>
	<string name="btn_comment">备注</string>
	<string name="btn_addfans">订阅</string>
	<!-- 菜单文字 -->
	<string name="menu_app_write">帮助文档</string>
	<string name="menu_app_logout">退出登录</string>
	<string name="menu_app_about">应用信息</string>
	<string name="menu_demo_web">网页示例</string>
	<string name="menu_demo_map">地图示例</string>
	<string name="menu_demo_test">测试示例</string>
	<!-- 配置提示 -->
	<string name="config_face">修改头像</string>
	<string name="config_sign">修改签名</string>
	<string name="config_monitor">开始监控</string>
	<string name="config_recordVideo">录制视频</string>
	<!-- 提示文字 -->
	<string name="msg_loginfail">登录失败</string>
	<!-- 界面文字 -->
	<string name="login_title">用户登录</string>
	<string name="login_username">账户</string>
	<string name="login_password">密码</string>
	<string name="login_remember">记住密码</string>
	<string name="login_submit">登录</string>
	<string name="edit_submit">保存</string>
	<string name="blog_comment">备注</string>
	<string name="customer_fans">订阅者</string>
	<string name="customer_blog">异动</string>
	<string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="menu_next_camera">Next Cam</string>
    <string name="menu_take_photo">Take Photo</string>
    <string name="menu_image_size">Size</string>
    <string name="photo_delete_prompt_message">This photo is saved in your Gallery. Do you want to delete it?</string>
    <string name="photo_delete_prompt_title">Delete photo?</string>
    <string name="photo_error_message">Failed to save photo</string>
    <string name="photo_edit_chooser_title">Edit photo with&#8230;</string>
    <string name="photo_send_chooser_title">Share photo with&#8230;</string>
    <string name="photo_send_extra_subject">My photo from Second Sight</string>
    <string name="photo_send_extra_text">Check out my photo from the Second Sight app! http://nummist.com/opencv/</string>
    <string name="share">Share</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
        <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
            <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
</resources>
